otimizaçao no findAll das services