@@ -26,7 +26,7 @@ public class ClienteService {
     public List<ClienteDTO> findAll(){
         List<Cliente> clientes =  this.clienteRepository.findAll();
 
-        return clientes.stream().map(item -> clienteConverter.convertToClienteDTO(item)).collect(Collectors.toList());
+        return clientes.stream().map(item -> clienteConverter.convertToClienteDTO(item)).toList();
     }
 
     @Transactional(rollbackFor = Exception.class)
